--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           BRANCH_NAME="${{ steps.getbranch.outputs.BRANCH }}"
           CURRENT_VERSION="${{ steps.gettag.outputs.TAG }}"
-        ## CURRENT_VERSION="${CURRENT_VERSION#v}"
+          CURRENT_VERSION="${CURRENT_VERSION#v}"
           IFS='.' read -ra VERSION_PARTS <<< "$CURRENT_VERSION"
           if [[ $BRANCH_NAME =~ ^release/ ]]; then
             VERSION_PARTS[0]=$((VERSION_PARTS[0] + 1))
@@ -60,7 +60,7 @@ jobs:
       - uses: release-drafter/release-drafter@v5
         with:
           commitish: master
-          name: "stellar-dbt ${{ steps.nextversion.outputs.NEXT_VERSION }}"
+          name: "dbt-gcp-billing-monitoring ${{ steps.nextversion.outputs.NEXT_VERSION }}"
           tag: ${{ steps.nextversion.outputs.NEXT_VERSION }}
           publish: true
         env:
