--- a/models/marts/dim_billing_monitoring_skus.yml
+++ b/models/marts/dim_billing_monitoring_skus.yml
@@ -12,7 +12,7 @@ models:
           - unique
 
       - name: sku_id
-        description: '{{ doc("sku.id") }}'
+        description: '{{ doc("sku_id") }}'
 
       - name: sku_description
         description: '{{ doc("sku_description") }}'
